# taskpilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/taskpilot/: __init__.py  _config.py  _decorator.py  _types.py  api.py  backoff.py  middleware.py  schema.py  serialization.py  store.py
src/taskpilot/cli/: _output.py  app.py  cleanup.py  list.py  retry.py  show.py  status.py  tail.py
tests/: conftest.py  test_api.py  test_backoff.py  test_cli_cleanup.py  test_cli_list.py  test_cli_retry.py  test_cli_show.py  test_cli_status.py  test_cli_tail.py  test_decorator.py  test_middleware.py  test_real_world_scenarios.py  test_schema.py  test_serialization.py  test_store.py
